# pigeon

./: .build.yml  .gitignore  README.md  harvest-almanac.doap  meson.build  meson_post_install.sh  pigeon.doap
data/: io.partin.tristan.Pigeon.appdata.xml.in  io.partin.tristan.Pigeon.desktop.in  io.partin.tristan.Pigeon.gschema.xml  meson.build  pigeon-resources.gresource.xml
data/ui/: pigeon-application-window.ui  pigeon-page-tab.ui  pigeon-page.ui  pigeon-request-explorer.ui  pigeon-shortcuts-window.ui
po/: POTFILES  meson.build
src/: config.h.in  main.c  meson.build  pigeon-application-window.c  pigeon-application-window.h  pigeon-application.c  pigeon-application.h  pigeon-page-tab.c  pigeon-page-tab.h  pigeon-page.c  pigeon-page.h  pigeon-request-explorer.c  pigeon-request-explorer.h
subprojects/: gio.wrap  gtk.wrap  gtksourceview.wrap
